# simulation

./: Cargo.toml  README.md
src/: lib.rs  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
