[package]
name = "simulation"
version = "0.1.0"
edition = "2024"
description = "WGPU Simulation"
repository = "https://github.com/dadal00/simulation"
license = "MIT"

[profile.release]
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--all-features"]


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = { version = "0.30.8", features = ["android-native-activity"] }
anyhow = "1.0.100"
env_logger = "0.11.8"
log = "0.4.28"
pollster = "0.4.0"
wgpu = "27.0.1"
bytemuck = {version = "1.24.0", features = [ "derive" ]}
cgmath = "0.18.0"
tobj = { version = "3.2", default-features = false, features = ["async"]}
instant = "0.1.13"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg", "hdr"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
reqwest = { version = "0.11" }
instant = { version = "0.1", features = [ "wasm-bindgen" ] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
